<resources>
    <string name="app_name">Boletin32</string>
    <string name="textoPrueba">Esto es una prueba</string>
    <string name="checkBoxTextBlack">Texto Negrita</string>
    <string name="checkBoxMoreFont">Aumento tamaño fuente</string>
    <string name="checkBoxLessFont">Disminucion tamaño fuente</string>
    <string name="checkBoxColorRed">Cambiar color rojo</string>
    <string name="primer_numero">Primer Numero</string>
    <string name="segundo_numero">Segundo Numero</string>
    <string name="sumar">Sumar +</string>
    <string name="restar">Restar -</string>
    <string name="multiplicar">Multiplicar X</string>
    <string name="dividir">Dividir /</string>
    <string name="SinResultado">Sin resultado </string>
</resources>