<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Actividad1Activity" >

    <TextView
        android:id="@+id/textViewAct1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textoPrueba"
        android:gravity="center"/>

    <CheckBox
        android:id="@+id/checkBoxTextBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxTextBlack" />

    <CheckBox
        android:id="@+id/checkBoxMoreFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxMoreFont"  />

    <CheckBox
        android:id="@+id/checkBoxLessFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxLessFont"  />

    <CheckBox
        android:id="@+id/checkBoxColorRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxColorRed" />
</LinearLayout>